# firework

./: .gitattributes  .gitignore  ANALISIS_PROFUNDO.md  BLANK_PAGE_FIX.md  CONNECTION_RESET_FIX.md  CORS_IMPLEMENTATION.md  Cargo.toml  Cargo.toml.tmp  DBENTITY_FEATURE.md  DBENTITY_FIX.md  ERROR_HANDLING_FIXES.md  FEATURES_COMPLETE.md  FINAL_SESSION_SUMMARY.md  FRAMEWORK_COMPLETE_ANALYSIS.md  FRAMEWORK_FINAL_ANALYSIS.md  FRAMEWORK_ROADMAP.md  FWK_ROUTES_ENHANCED.md  GRACEFUL_SHUTDOWN.md  IMPROVEMENTS.md  LICENSE  MULTIPLE_ROUTES_FEATURE.md  OPTIMIZATIONS_COMPLETED.txt  PERFORMANCE_AUDIT.md  PERFORMANCE_FIXES_APPLIED.md  PROXY_ARCHITECTURE.md  README.md  README_VITE_AUTO.md  RELOAD_LOOP_FIX.md  SESSION_SUMMARY.md  TODOS_LOS_FIXES_VITE.md  VITE_AUTO_IMPLEMENTATION.md  VITE_AUTO_PROXY_FIX.md  VITE_FIX_FINAL.md  build.rs  install_fwk.sh
.cargo/: config.toml
bench-test/: Cargo.toml
bench-test/src/: main.rs
benches/: request_bench.rs  routing_bench.rs  server_bench.rs
core/: Cargo.toml
core/examples/: plugin_example.rs
core/src/: error.rs  extract.rs  lib.rs  request.rs  router.rs  server.rs  websocket.rs
docs/: DOCUMENTATION_INDEX.md  MULTIPLE_ROUTES.md  README.md
docs/advanced/: hot-reload.md  plugins.md  testing.md  websockets.md
docs/api/: macros.md  request.md  response.md  server.md
docs/core/: configuration.md  errors.md  extractors.md  handlers.md  middleware.md  request-response.md  routing.md
docs/examples/: best-practices.md  index.md  patterns.md
docs/getting-started/: first-app.md  installation.md  project-structure.md  quickstart.md
docs/guides/: auth-flow.md  database.md  file-uploads.md  rest-api.md  security.md
docs/migration/: actix.md
docs/performance/: benchmarks.md  deployment.md  optimization.md
docs/plugins/: auth.md  custom.md  seaorm.md  vite.md
examples/: benchmark_server.rs  cookie_example.rs  flexible_handlers.rs  hello_world.rs  hot_reload_example.rs  hot_reload_state_example.rs  manual_run.rs  multiple_routes.rs  run_macro.rs  run_simple.rs  seaorm_example.rs  testing_example.rs  upload_example.rs  validation_example.rs  vite_integration.rs  websocket_chat.rs
examples/proxy/: Cargo.toml
examples/proxy/src/: main.rs
examples/threads-clone/backend/: Cargo.toml
examples/threads-clone/backend/src/: main.rs
examples/threads-clone/frontend/: index.html  package-lock.json  package.json
examples/threads-clone/frontend/src/: main.js
examples/todo-app/: Cargo.toml
examples/todo-app/frontend/: index.html  package.json
examples/todo-app/frontend/src/: App.css  App.jsx
examples/twitter-clone/: README.md
examples/twitter-clone/backend/: Cargo.toml
examples/twitter-clone/backend/src/: main.rs
examples/twitter-clone/frontend/: index.html  package-lock.json  package.json
examples/twitter-clone/frontend/src/: App.css  App.jsx  index.css
firework/: Cargo.toml  README.md
firework-auth/: Cargo.toml
firework-auth/examples/: auth_demo.rs  simple_api.rs
firework-cli/: Cargo.toml  FWK_ROUTES.md  README.md
firework-cli/src/: commands.rs  main.rs  templates.rs
firework-macros/: Cargo.toml
firework-macros/src/: lib.rs
firework-seaorm/: Cargo.toml
firework/examples/: complete_static_server.rs  config_example.rs  seaorm_example.rs  streaming_example.rs
firework/src/: config.rs  hot_reload.rs  hot_reload_state.rs  macros.rs  main.rs  plugin.rs  response.rs  server.rs  test.rs
frontend/: package.json
frontend/src/: main.js
fwk/: Cargo.toml
fwk/src/: commands.rs  main.rs  templates.rs
macros/src/: lib.rs
plugins/auth/: Cargo.toml
plugins/firework-auth/: Cargo.toml  README.md
plugins/firework-auth/examples/: auth_demo.rs
plugins/firework-auth/src/: lib.rs
plugins/firework-compress/: Cargo.toml  README.md
plugins/firework-compress/examples/: simple.rs
plugins/firework-compress/src/: lib.rs
plugins/firework-cors/: Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md
plugins/firework-cors/examples/: simple.rs  with_config.rs
plugins/firework-cors/src/: lib.rs
plugins/firework-dataloader/: Cargo.toml  README.md
plugins/firework-dataloader/src/: lib.rs
plugins/firework-proxy/: Cargo.toml  README.md
plugins/firework-proxy/src/: lib.rs
plugins/firework-seaorm/: Cargo.toml  DBENTITY.md  README.md
plugins/firework-seaorm/src/: lib.rs
plugins/firework-security/: Cargo.toml  README.md
plugins/firework-security/src/: lib.rs
plugins/firework-vite/: Cargo.toml  README.md
plugins/firework-vite/src/: lib.rs
plugins/seaorm/: Cargo.toml
posts/: Cargo.toml
posts/src/: main.rs
src/: cookie.rs  error.rs  extract.rs  hot_reload_state.rs  io_uring_server.rs  lib.rs  light_guard.rs  log.rs  macros.rs  middleware.rs  perfect_hash_router.rs  phf_routes.rs  plugin.rs  request.rs  response.rs  route.rs  router.rs  serve.rs  server.rs  test.rs  upload.rs  validation.rs  websocket.rs
tests/: integration_tests.rs  middleware_tests.rs  test_serve.rs
undergun/: .gitignore  Cargo.toml
undergun/examples/: hot_reload_example.rs
undergun/migrations/: init.sql
undergun/src/: auth.rs  main.rs  models.rs
undergun/src/entities/: mod.rs  posts.rs  users.rs
undergun/src/handlers/: auth.rs  mod.rs  pages.rs  posts.rs
undergun/static/: index.html  login.html  register.html
undergun/static/css/: style.css
undergun/static/js/: app.js  auth.js
