[workspace]
members = [
    "firework",
    "firework-macros",
    "firework-seaorm",
    "firework-auth",
    "fwk",
]
exclude = ["undergun"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Firework Contributors"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
