[package]
name = "firework"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Firework Contributors"]

[features]
default = ["jemalloc"]
testing = []
hot-reload = ["notify", "cargo_metadata", "ctrlc"]
jemalloc = ["tikv-jemallocator"]
io-uring = ["tokio-uring"]
http2 = ["h2"]

[dependencies]
tokio = { version = "1", features = ["full"] }
firework-macros = { path = "./firework-macros" }
linkme = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
async-trait = "0.1"
toml = "0.8"
num_cpus = "1.16"
lazy_static = "1.4"
notify = { version = "6", optional = true }
cargo_metadata = { version = "0.18", optional = true }
ctrlc = { version = "3.4", optional = true }
bytes = "1.5"
httparse = "1.8"
socket2 = "0.5"
libc = "0.2"
tokio-tungstenite = "0.21"
sha1 = "0.10"
base64 = "0.21"
futures-util = "0.3"
validator = { version = "0.18", features = ["derive"] }
multer = "3.1"
tempfile = "3.10"
chrono = "0.4"
memchr = "2.7"
http = "1.0"
form_urlencoded = "1.2"
dashmap = "6.0"
tikv-jemallocator = { version = "0.6", optional = true }
tokio-uring = { version = "0.5", optional = true }
h2 = { version = "0.4", optional = true }
smallvec = "1.13"
ahash = "0.8"
rustc-hash = "2.0"
phf = "0.11"

[build-dependencies]
phf_codegen = "0.11"

[dev-dependencies]
firework-seaorm = { path = "./plugins/firework-seaorm" }
async-trait = "0.1"
criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.12", features = ["json"] }

[[example]]
name = "seaorm_example"
path = "examples/seaorm_example.rs"

[[example]]
name = "testing_example"
path = "examples/testing_example.rs"
required-features = ["testing"]

[[example]]
name = "hot_reload_example"
path = "examples/hot_reload_example.rs"

[[example]]
name = "hot_reload_state_example"
path = "examples/hot_reload_state_example.rs"
required-features = ["hot-reload"]

[[example]]
name = "websocket_chat"
path = "examples/websocket_chat.rs"

[[bin]]
name = "firework-dev"
path = "src/bin/firework-dev.rs"
required-features = ["hot-reload"]

[[bench]]
name = "routing_bench"
harness = false

[[bench]]
name = "request_bench"
harness = false

[[bench]]
name = "server_bench"
harness = false

[workspace]
members = [
    "firework-macros",
    "firework-cli",
    "plugins/firework-seaorm",
    "plugins/firework-auth",
    "plugins/firework-proxy",
    "plugins/firework-vite",
    "plugins/firework-dataloader",
    "examples/threads-clone/backend", "examples/todo-app", "plugins/firework-cors", "plugins/firework-security", "plugins/firework-compress",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Firework Contributors"]

[profile.release]
opt-level = 3
lto = "fat"       # Full LTO for maximum optimization
codegen-units = 1 # Single codegen unit for best optimization
panic = "abort"   # Smaller binary, slightly faster
strip = true      # Strip symbols for smaller binary

# Profile-Guided Optimization (PGO) profile
# Usage:
#   1. cargo build --release
#   2. Run benchmark to generate profile data
#   3. cargo build --release (will use PGO data)
[profile.release.package."*"]
opt-level = 3

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
