[package]
name = "firework"
version = "0.1.0"
edition = "2021"

[features]
default = []
testing = []
hot-reload = ["notify", "cargo_metadata", "ctrlc"]

[dependencies]
tokio = { version = "1", features = ["full"] }
firework-macros = { path = "../macros" }
linkme = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
async-trait = "0.1"
toml = "0.8"
num_cpus = "1.16"
lazy_static = "1.4"
notify = { version = "6", optional = true }
cargo_metadata = { version = "0.18", optional = true }
ctrlc = { version = "3.4", optional = true }
bytes = "1.5"
httparse = "1.8"
socket2 = "0.5"
libc = "0.2"
tokio-tungstenite = "0.21"
sha1 = "0.10"
base64 = "0.21"
futures-util = "0.3"

[dev-dependencies]
firework-seaorm = { path = "../plugins/seaorm" }
async-trait = "0.1"

[[example]]
name = "seaorm_example"
path = "examples/seaorm_example.rs"

[[example]]
name = "testing_example"
path = "examples/testing_example.rs"
required-features = ["testing"]

[[example]]
name = "hot_reload_example"
path = "examples/hot_reload_example.rs"

[[example]]
name = "hot_reload_state_example"
path = "examples/hot_reload_state_example.rs"
required-features = ["hot-reload"]

[[example]]
name = "websocket_chat"
path = "examples/websocket_chat.rs"
