[package]
name = "firework-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
firework = { path = "../.." }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = "0.4"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
linkme = "0.3"

[lib]
proc-macro = false
