[package]
name = "firework-compress"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Compression middleware for Firework framework"

[dependencies]
firework = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
flate2 = "1.0"
brotli = "7.0"
