[package]
name = "firework-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Firework Contributors"]
license = "MIT"

[dependencies]
firework = { path = "../.." }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
tower = "0.4"
pin-project-lite = "0.2"
