[package]
name = "firework-seaorm"
version = "0.1.0"
edition = "2021"

[dependencies]
firework = { path = "../.." }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }

[lib]
proc-macro = false
