[package]
name = "firework-vite"
version = "0.1.0"
edition = "2021"
authors = ["Firework Contributors"]
license = "MIT"
description = "Vite integration plugin for Firework - Fullstack Rust web development"

[lib]
path = "src/lib.rs"

[dependencies]
firework = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
