[package]
name = "twitter-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
firework = { path = "../../.." }
firework-vite = { path = "../../../plugins/firework-vite" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
